2009-09-30    <jmerelo@localhost.localdomain>

	* lib/Algorithm/MasterMind.pm (not_in_combination): Changing all
	documentation to avoid problems, and added a few things.

	* MANIFEST: Added set of files to the MANIFEST, and preparing
	stuff for initial release 

Revision history for Algorithm-MasterMind

0.0.1  Sun Sep  6 13:54:21 2009
       Initial release.
