@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Algorithm-MasterMind
-version:             0.0.2
+version:             0.0.3
 abstract:            Framework for algorithms that solve the MasterMind game
 license:             ~
 author:              
