@@ -1,4 +1,4 @@
-package Algorithm::MasterMind::Sequential;
+package Algorithm::MasterMind::Test;
 
 use warnings;
 use strict;
@@ -6,45 +6,13 @@ use Carp;
 
 use lib qw(../../lib);
 
-our $VERSION =   sprintf "%d.%03d", q$Revision: 1.5 $ =~ /(\d+)\.(\d+)/g; 
+our $VERSION =   sprintf "%d.%03d", q$Revision: 1.1 $ =~ /(\d+)\.(\d+)/g; 
 
 use base 'Algorithm::MasterMind';
 
 sub initialize {
   my $self = shift;
-  my $options = shift || croak "Need options here";
-  for my $o ( keys %$options ) {
-    $self->{"_$o"} = $options->{$o}
-  }
-  my @alphabet = @{$self->{'_alphabet'}};
-  $self->{'_range'} = $alphabet[0]."-".$alphabet[$#alphabet];
-  $self->{'_current_string'} = $alphabet[0] x $self->{'_length'};
-  $self->{'_last_string'} = $alphabet[$#alphabet]x $self->{'_length'};
-
-}
-
-sub issue_next {
-  my $self = shift;
-  my $rules =  $self->number_of_rules();
-  my ($match, $string);
-  do {
-    $string = $self->{'_current_string'};
-    $match = $self->matches($string);
-    $self->next_string;
-  } while ( ( $self->{'_current_string'} ne $self->{'_last_string'} )
-	    && $match->{'matches'} < $rules );
-  return  $self->{'_last'} = $string;
-}
-
-sub next_string {
-  my $self = shift;
-  $self->{'_current_string'}++;
-  my $range = $self->{'_range'};
-  if ( $self->{'_current_string'} =~ /[^$range]/ )  {
-    $self->{'_current_string'} =~ s/[^$range]/Z/g;
-    $self->{'_current_string'}++; #Using magic increment
-  }
-  
+  return 1;
 }
 
 "some blacks, 0 white"; # Magic true value required at end of module
@@ -53,29 +21,26 @@ __END__
 
 =head1 NAME
 
-Algorithm::MasterMind::Sequential - Tests each combination in turn.
+Algorithm::MasterMind::Test - Mock class used for testing algorithms
+by hand
 
 
 =head1 SYNOPSIS
 
-    use Algorithm::MasterMind::Sequential;
+    use Algorithm::MasterMind::Test;
 
-    my $secret_code = 'ADCB';
-    my @alphabet = qw( A B C D E F );
-    my $solver = new Algorithm::MasterMind::Sequential { alphabet => \@alphabet,
-						       length => length( $secret_code ) };
-    
-
+  
 =head1 DESCRIPTION
 
-Test combinations in turn, starting by A x length. Should find the
-solution, but complexity increases with size. Not very efficient.
+Mainly used in test functions, and as a way of instantiating base
+class. 
+
 
 =head1 INTERFACE 
 
 =head2 initialize()
 
-Called from base class, mainly
+Does nothing, really
 
 =head2 new ( $options )
 
@@ -98,6 +63,10 @@ Obtain the result to the last combination played
 
 Total number of guesses
 
+=head2 evaluated()
+
+Total number of combinations checked to issue result
+
 =head2 number_of_rules ()
 
 Returns the number of rules in the algorithm
@@ -113,10 +82,6 @@ Returns a hash with the number of matches, and whether it matches
 every rule with the number of blacks and whites it obtains with each
 of them
 
-=head2 next_string( $string )
-
-Computes the next string taking into account the limited alphabet, and
-    return the computed string
 
 =head1 AUTHOR
 
